--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -9,18 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.10.0",
     "@nekostack/config": "*",
     "@nekostack/types": "*",
     "@nekostack/ui": "*",
     "@nekostack/utils": "*",
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.0",
     "next": "^14.0.0",
-    "next-auth": "^4.24.0",
+    "next-auth": "^4.24.11",
     "next-intl": "^4.3.9",
     "next-themes": "^0.2.1",
     "react": "^18.0.0",
