feat: Enhance project configuration and Cloudflare Workers setup
- Updated .gitignore to include Cloudflare Workers and TypeScript build artifacts.
- Modified package.json to add new scripts for worker development and database migrations.
- Enhanced turbo.json with cache settings for database migration and seeding.
- Improved API Gateway worker with comprehensive route handling and middleware integration.
- Added environment-specific configurations in wrangler.toml for production, staging, and development.
- Updated package-lock.json and package.json to reflect new dependencies and versions.

Files Modified:
- .gitignore
- package-lock.json
- package.json
- tsconfig.tsbuildinfo
- turbo.json
- apps/homepage/src/app/not-found.tsx
- services/workers/api-gateway/package.json
- services/workers/api-gateway/wrangler.toml
- services/workers/api-gateway/src/index.ts

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,28 @@ docker-compose.prod.yml
 # OS
 .DS_Store
 Thumbs.db
+
+# Cloudflare Workers
+.wrangler/
+**/.wrangler/
+wrangler.toml
+
+# TypeScript build info
+tsconfig.tsbuildinfo
+
+# Environment files
+.env.production
+.env.staging
+.env.development
+production.env.example
+
+# Build artifacts
+*.tsbuildinfo
+
+# Cloudflare Workers build outputs
+**/dist/
+**/wrangler.toml
+
+# Backup files
+*.backup
+*.bak
