--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.10.0",
@@ -14,6 +18,7 @@
     "@nekostack/types": "*",
     "@nekostack/ui": "*",
     "@nekostack/utils": "*",
+    "@opennextjs/cloudflare": "^1.11.0",
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -23,12 +28,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.0",
-    "next": "^14.0.0",
+    "next": "^15.1.0",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.9",
     "next-themes": "^0.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "zustand": "^4.4.0"
@@ -39,14 +44,15 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "^15.0.0",
     "jest": "^29.0.0",
     "playwright": "^1.40.0",
     "postcss": "^8.5.6",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "wrangler": "^4.45.0"
   }
 }
